tests/test-files/parse-when.txt
================================================================================
100 Malformed when expression
================================================================================

(package test-parser)

(define f (when))

--------------------------------------------------------------------------------

error: Malformed when expression
  --> test:3:15
   |
 3 |  (define f (when))
   |                 ^ expected a predicate

================================================================================
101 Malformed function
================================================================================

(package test-package)

(define x (when 1))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:17
   |
 3 |  (define x (when 1))
   |                   ^ expected body
